# simpleStudy

./: CMakeLists.txt  ChangeLog
cmt/: requirements
macros/: CleanValgrind.py  ExtractCalib.py  makeFits.py  makePlots.py
run/: TestAlg.py  TestAlg_alt.py  TestAlg_newiso.py  TestAlg_recov.py  TestAlg_simple.py  TestAlg_simple_newiso.py  awkprog
simpleStudy/: TestAlg.h  TestAlgESD.h  TruthUtils.h  UserData_Electrons.h  UserData_Photons.h
src/: TestAlg.cxx  TruthUtils.cxx
src/components/: simpleStudy_entries.cxx  simpleStudy_load.cxx
util/: TestExe.cxx
